--- a/SupportBank/package.json
+++ b/SupportBank/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async-csv": "^2.1.1",
     "csv-parser": "^2.3.0",
+    "moment": "^2.24.0",
     "neat-csv": "^5.1.0",
     "readline-sync": "^1.4.9"
   }
