--- a/SupportBank/package.json
+++ b/SupportBank/package.json
@@ -14,6 +14,7 @@
     "log4js": "^4.5.1",
     "moment": "^2.24.0",
     "neat-csv": "^5.1.0",
-    "readline-sync": "^1.4.9"
+    "readline-sync": "^1.4.9",
+    "xml-js": "^1.6.11"
   }
 }
