--- a/SupportBank/package.json
+++ b/SupportBank/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.24.0",
     "neat-csv": "^5.1.0",
     "readline-sync": "^1.4.9",
-    "xml-js": "^1.6.11"
+    "xml-js": "^1.6.11",
+    "xml2js": "^0.4.19"
   }
 }
