--- a/SupportBank/package.json
+++ b/SupportBank/package.json
@@ -17,5 +17,10 @@
     "readline-sync": "^1.4.9",
     "xml-js": "^1.6.11",
     "xml2js": "^0.4.19"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-plugin-import": "^2.18.0"
   }
 }
