--- a/SupportBank/.eslintrc.json
+++ b/SupportBank/.eslintrc.json
@@ -18,6 +18,6 @@
         "semi":["error", "always"],
         "indent":["error", 4],
         "linebreak-style":["windows"],
-        "no-plusplus":["error", { "allowForLoopAfterthoughts": true }],
+        "no-plusplus":["error", { "allowForLoopAfterthoughts": true }]
     }
 }
