--- a/SupportBank/.eslintrc.json
+++ b/SupportBank/.eslintrc.json
@@ -5,7 +5,7 @@
         "es6": true
     },
     "extends": [
-        "airbnb-base"
+        "eslint:recommended"
     ],
     "globals": {
         "Atomics": "readonly",
@@ -17,7 +17,8 @@
     "rules": {
         "semi":["error", "always"],
         "indent":["error", 4],
-        "linebreak-style":["windows"],
-        "no-plusplus":["error", { "allowForLoopAfterthoughts": true }]
+        "linebreak-style":["error","windows"],
+        "no-plusplus":["error", { "allowForLoopAfterthoughts": true }],
+        "no-console":["off"]
     }
 }
