--- a/BusBoard/package.json
+++ b/BusBoard/package.json
@@ -17,6 +17,7 @@
     "eslint-plugin-standard": "^4.0.0"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "fs": "0.0.1-security",
     "readline-sync": "^1.4.9",
     "request": "^2.88.0",
